Added the ability for users to register or login. Fixed file writing into log.